- Initial Commit: Data Exploration

--- a/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
+++ b/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
@@ -108,6 +108,380 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## II. Analysis\n",
+    "### Data Exploration\n",
+    "The first step for Data Exploration is to get the list of all companies listed in B3 exchange. It can be downloaded in link [8] of References section. The data used in this notebook was downloaded in 27th November 2017 and can be found under the **/Data/B3 folder**.\n",
+    "Below the data is loaded in a list and then printed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "First 5 lines\n",
+      "['00COTAHIST.2017BOVESPA 20171124                                                                                                                                                                                                                      \\n', '012017112402AALR3       010ALLIAR      ON      NM   R$  000000000157000000000015950000000001558000000000158300000000015950000000001595000000000160000308000000000000145500000000000230356200000000000000009999123100000010000000000000BRAALRACNOR6100\\n', '012017112496AALR3F      020ALLIAR      ON      NM   R$  000000000165300000000016530000000001546000000000162700000000015630000000001552000000000160200009000000000000000168000000000000273491000000000000009999123100000010000000000000BRAALRACNOR6100\\n', '012017112402AAPL34      010APPLE       DRN          R$  000000000566500000000056650000000005632000000000563700000000056620000000005537000000000576300004000000000000002700000000000015220600000000000000009999123100000010000000000000BRAAPLBDR004123\\n', '012017112496AAPL34F     020APPLE       DRN          R$  000000000590000000000059000000000005900000000000590000000000059000000000004107000000000589900003000000000000000022000000000000129800000000000000009999123100000010000000000000BRAAPLBDR004123\\n']\n",
+      " \n",
+      "Last 5 lines\n",
+      "['012017112402WSON33      010WILSON SONS DR3          R$  000000000381000000000038990000000003810000000000383700000000038160000000003815000000000386700005000000000000000500000000000001918600000000000000009999123100000010000000000000BRWSONBDR009110\\n', '012017112414XBOV11      010CAIXAETFXBOVCI           R$  000000000735200000000073520000000007352000000000735200000000073520000000007352000000000000000001000000000000000100000000000000735200000000000000009999123100000010000000000000BRXBOVCTF005100\\n', '012017112412XPCM11      010FII XP MACAECI           R$  000000000984100000000098670000000009790000000000983300000000098300000000009828000000000985000122000000000000011341000000000111516324000000000000009999123100000010000000000000BRXPCMCTF009156\\n', '012017112414XPOM11      010FIP XP OMEGACI  ED       R$  000000001019200000000101970000000010054000000001015400000000100580000000010058000000001019000007000000000000000632000000000006417515000000000000009999123100000010000000000000BRXPOMCTF004109\\n', '012017112412XTED11      010FII TRXE CORCI           R$  000000000262500000000026990000000002621000000000264600000000026990000000002641000000000269900011000000000000002726000000000007213396000000000000009999123100000010000000000000BRXTEDCTF006143\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "fileLines = open('..\\Data\\B3\\COTAHIST_D24112017.txt', 'r').readlines()\n",
+    "print \"First 5 lines\"\n",
+    "print fileLines[0:5]\n",
+    "print \" \"\n",
+    "print \"Last 5 lines\"\n",
+    "print fileLines[-6:-1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The data is formatted in a specific layout described in file **HistoricalQuotations_B3.pdf** under folder **/Documents** and cam be downloaded in link [9] of References section.\n",
+    "In the snippet below, it is imported a module that I created to handle with B3 files. All explanations are in the source file under the folder **/src**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Getting .txt files from ..\\Data\\B3\n",
+      "1 files found\n",
+      "Parsing File 1 of 1\n",
+      "Parsing File: ..\\Data\\B3\\COTAHIST_D24112017.TXT\n",
+      "Reading File...\n",
+      "\n",
+      "[============================================================] 100.0% ...Reading File\n",
+      "\n",
+      "Writing File...\n",
+      "\n",
+      "[============================================================] 100.0% ...Writing File\n",
+      "\n",
+      "File created at ..\\Data\\Parsed\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "sys.path.insert(0, '..\\src') #Used to include the path in python's search\n",
+    "\n",
+    "from BovespaFileParser import BovespaFileParser\n",
+    "bovespa = BovespaFileParser()\n",
+    "folder = bovespa.ParseFolder('..\\Data\\B3','..\\Data',False)\n",
+    "print \"File created at \" + folder"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After parsing the file, a new folder **\\Parsed** was created under the folder **\\Data** and the file created have the same name of the original but with **.csv** format. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style>\n",
+       "    .dataframe thead tr:only-child th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>TYPE OF REGISTER</th>\n",
+       "      <th>DATE OF EXCHANGE</th>\n",
+       "      <th>BDI CODE</th>\n",
+       "      <th>PAPER NEGOTIATION CODE</th>\n",
+       "      <th>TYPE OF MARKET</th>\n",
+       "      <th>ABBREVIATED NAME OF THE COMPANY</th>\n",
+       "      <th>PAPER SPECIFICATION</th>\n",
+       "      <th>FORWARD MARKET TERM IN DAYS</th>\n",
+       "      <th>REFERENCE CURRENCY</th>\n",
+       "      <th>MARKET PAPER OPENING FLOOR PRICE</th>\n",
+       "      <th>...</th>\n",
+       "      <th>NUMBER OF TRADES CONDUCTED WITH THE MARKET PAPER</th>\n",
+       "      <th>TOTAL QUANTITY OF TITLES TRADED WITH THIS MARKET PAPER</th>\n",
+       "      <th>TOTAL VOLUME OF TITLES NEGOTIATED WITH THIS MARKET PAPER</th>\n",
+       "      <th>STRIKE PRICE FOR THE OPTIONS MARKET OR CONTRACT AMOUNT FOR THE SECONDARY FORWARD MARKET</th>\n",
+       "      <th>STRIKE PRICE OR CONTRACT AMOUNT FOR OPTIONS OR SECONDARY FORWARD MARKETS CORRECTION INDICATOR</th>\n",
+       "      <th>MATURITY DATE FOR OPTIONS OR SECONDARY FORWARD MARKET</th>\n",
+       "      <th>PAPER QUOTATION FACTOR</th>\n",
+       "      <th>STRIKE PRICE IN POINTS FOR OPTIONS REFERENCED IN US DOLLARS OR CONTRACT AMOUNT IN POINTS FOR SECONDARY FORWARD</th>\n",
+       "      <th>PAPER CODE IN THE IS IN SYSTEM OR PAPER INTERNAL CODE</th>\n",
+       "      <th>PAPER DISTRIBUTION NUMBER</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-11-24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>AALR3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>ALLIAR</td>\n",
+       "      <td>ON      NM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>15.70</td>\n",
+       "      <td>...</td>\n",
+       "      <td>308</td>\n",
+       "      <td>145500</td>\n",
+       "      <td>2303562.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9999-12-31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRAALRACNOR6</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-11-24</td>\n",
+       "      <td>96</td>\n",
+       "      <td>AALR3F</td>\n",
+       "      <td>20</td>\n",
+       "      <td>ALLIAR</td>\n",
+       "      <td>ON      NM</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>16.53</td>\n",
+       "      <td>...</td>\n",
+       "      <td>9</td>\n",
+       "      <td>168</td>\n",
+       "      <td>2734.91</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9999-12-31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRAALRACNOR6</td>\n",
+       "      <td>100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-11-24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>AAPL34</td>\n",
+       "      <td>10</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>DRN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>56.65</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4</td>\n",
+       "      <td>2700</td>\n",
+       "      <td>152206.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9999-12-31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRAAPLBDR004</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-11-24</td>\n",
+       "      <td>96</td>\n",
+       "      <td>AAPL34F</td>\n",
+       "      <td>20</td>\n",
+       "      <td>APPLE</td>\n",
+       "      <td>DRN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>59.00</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>22</td>\n",
+       "      <td>1298.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9999-12-31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRAAPLBDR004</td>\n",
+       "      <td>123</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>2017-11-24</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ABCB4</td>\n",
+       "      <td>10</td>\n",
+       "      <td>ABC BRASIL</td>\n",
+       "      <td>PN      N2</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>R$</td>\n",
+       "      <td>16.83</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1251</td>\n",
+       "      <td>745000</td>\n",
+       "      <td>12347623.00</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>9999-12-31</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>BRABCBACNPR4</td>\n",
+       "      <td>128</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 26 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   TYPE OF REGISTER DATE OF EXCHANGE  BDI CODE PAPER NEGOTIATION CODE  \\\n",
+       "0                 1       2017-11-24         2                  AALR3   \n",
+       "1                 1       2017-11-24        96                 AALR3F   \n",
+       "2                 1       2017-11-24         2                 AAPL34   \n",
+       "3                 1       2017-11-24        96                AAPL34F   \n",
+       "4                 1       2017-11-24         2                  ABCB4   \n",
+       "\n",
+       "   TYPE OF MARKET ABBREVIATED NAME OF THE COMPANY PAPER SPECIFICATION  \\\n",
+       "0              10                          ALLIAR          ON      NM   \n",
+       "1              20                          ALLIAR          ON      NM   \n",
+       "2              10                           APPLE                 DRN   \n",
+       "3              20                           APPLE                 DRN   \n",
+       "4              10                      ABC BRASIL          PN      N2   \n",
+       "\n",
+       "   FORWARD MARKET TERM IN DAYS REFERENCE CURRENCY  \\\n",
+       "0                          NaN                 R$   \n",
+       "1                          NaN                 R$   \n",
+       "2                          NaN                 R$   \n",
+       "3                          NaN                 R$   \n",
+       "4                          NaN                 R$   \n",
+       "\n",
+       "   MARKET PAPER OPENING FLOOR PRICE            ...              \\\n",
+       "0                             15.70            ...               \n",
+       "1                             16.53            ...               \n",
+       "2                             56.65            ...               \n",
+       "3                             59.00            ...               \n",
+       "4                             16.83            ...               \n",
+       "\n",
+       "   NUMBER OF TRADES CONDUCTED WITH THE MARKET PAPER  \\\n",
+       "0                                               308   \n",
+       "1                                                 9   \n",
+       "2                                                 4   \n",
+       "3                                                 3   \n",
+       "4                                              1251   \n",
+       "\n",
+       "   TOTAL QUANTITY OF TITLES TRADED WITH THIS MARKET PAPER  \\\n",
+       "0                                             145500        \n",
+       "1                                                168        \n",
+       "2                                               2700        \n",
+       "3                                                 22        \n",
+       "4                                             745000        \n",
+       "\n",
+       "   TOTAL VOLUME OF TITLES NEGOTIATED WITH THIS MARKET PAPER  \\\n",
+       "0                                         2303562.00          \n",
+       "1                                            2734.91          \n",
+       "2                                          152206.00          \n",
+       "3                                            1298.00          \n",
+       "4                                        12347623.00          \n",
+       "\n",
+       "   STRIKE PRICE FOR THE OPTIONS MARKET OR CONTRACT AMOUNT FOR THE SECONDARY FORWARD MARKET  \\\n",
+       "0                                                0.0                                         \n",
+       "1                                                0.0                                         \n",
+       "2                                                0.0                                         \n",
+       "3                                                0.0                                         \n",
+       "4                                                0.0                                         \n",
+       "\n",
+       "   STRIKE PRICE OR CONTRACT AMOUNT FOR OPTIONS OR SECONDARY FORWARD MARKETS CORRECTION INDICATOR  \\\n",
+       "0                                                  0                                               \n",
+       "1                                                  0                                               \n",
+       "2                                                  0                                               \n",
+       "3                                                  0                                               \n",
+       "4                                                  0                                               \n",
+       "\n",
+       "   MATURITY DATE FOR OPTIONS OR SECONDARY FORWARD MARKET  \\\n",
+       "0                                         9999-12-31       \n",
+       "1                                         9999-12-31       \n",
+       "2                                         9999-12-31       \n",
+       "3                                         9999-12-31       \n",
+       "4                                         9999-12-31       \n",
+       "\n",
+       "   PAPER QUOTATION FACTOR  \\\n",
+       "0                       1   \n",
+       "1                       1   \n",
+       "2                       1   \n",
+       "3                       1   \n",
+       "4                       1   \n",
+       "\n",
+       "   STRIKE PRICE IN POINTS FOR OPTIONS REFERENCED IN US DOLLARS OR CONTRACT AMOUNT IN POINTS FOR SECONDARY FORWARD  \\\n",
+       "0                                                0.0                                                                \n",
+       "1                                                0.0                                                                \n",
+       "2                                                0.0                                                                \n",
+       "3                                                0.0                                                                \n",
+       "4                                                0.0                                                                \n",
+       "\n",
+       "   PAPER CODE IN THE IS IN SYSTEM OR PAPER INTERNAL CODE  \\\n",
+       "0                                       BRAALRACNOR6       \n",
+       "1                                       BRAALRACNOR6       \n",
+       "2                                       BRAAPLBDR004       \n",
+       "3                                       BRAAPLBDR004       \n",
+       "4                                       BRABCBACNPR4       \n",
+       "\n",
+       "   PAPER DISTRIBUTION NUMBER  \n",
+       "0                        100  \n",
+       "1                        100  \n",
+       "2                        123  \n",
+       "3                        123  \n",
+       "4                        128  \n",
+       "\n",
+       "[5 rows x 26 columns]"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as p\n",
+    "parsedDf = pd.read_csv(folder+'\\COTAHIST_D24112017.csv')\n",
+    "parsedDf.head()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "collapsed": true
    },
@@ -119,8 +493,19 @@
     "[4]: https://www.investopedia.com/terms/e/exchange.asp (Accessed in 2017-11-26)<br>\n",
     "[5]: https://www.investopedia.com/ask/answers/133.asp?ad=dirN&qo=investopediaSiteSearch&qsrc=0&o=40186 (Accessed in 2017-11-26)<br>\n",
     "[6]: https://www.investopedia.com/terms/a/adjusted_closing_price.asp (Accessed in 2017-11-26) <br>\n",
-    "[7]: https://en.wikipedia.org/wiki/Coefficient_of_determination (Accessed in 2017-11-26) <br>"
+    "[7]: https://en.wikipedia.org/wiki/Coefficient_of_determination (Accessed in 2017-11-26) <br>\n",
+    "[8]: http://www.bmfbovespa.com.br/en_us/services/market-data/historical-data/equities/historical-data/ (Accessed in 2017-11-27)<br>\n",
+    "[9]: http://www.bmfbovespa.com.br/en_us/services/market-data/historical-data/equities/historical-data-1/#panel3a (Accessed in 2017-11-27) <br>"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
