Fixing Markdown issues in report

--- a/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
+++ b/projects/capstone/CapstoneProject/Report/Capstone Report.ipynb
@@ -17,39 +17,39 @@
     "## I. Definition\n",
     "\n",
     "### Project Overview\n",
-    "The main objective for this project is to be capable to predict the **price of a given set stock** in a future time interval in days. In order to achieve the goal, Machine Learning techniques will be applied on the historical **adjusted closing prices** for a set of **companies stocks** listed in the **B3 exchange** in 2017. \n",
+    "The main objective for this project is to be capable to predict the <b>price of a given set stock</b> in a future time interval in days. In order to achieve the goal, Machine Learning techniques will be applied on the historical <b>adjusted close prices</b> for different stocks.\n",
     "\n",
     "#### What is a stock?\n",
     "\n",
     "<p> According to Investopedia: <br>\n",
     "\n",
-    "\"*A stock is a type of security that signifies ownership in a corporation and represents a claim on part of the corporation's assets and earnings. <br>\n",
-    "There are two main types of stock: common and preferred. Common stock usually entitles the owner to vote at shareholders' meetings and to receive dividends. Preferred stock generally does not have voting rights, but has a higher claim on assets and earnings than the common shares. For example, owners of preferred stock receive dividends before common shareholders and have priority in the event that a company goes bankrupt and is liquidated.*\" [1] </p>\n",
+    "\"<i>A stock is a type of security that signifies ownership in a corporation and represents a claim on part of the corporation's assets and earnings. <br>\n",
+    "There are two main types of stock: common and preferred. Common stock usually entitles the owner to vote at shareholders' meetings and to receive dividends. Preferred stock generally does not have voting rights, but has a higher claim on assets and earnings than the common shares. For example, owners of preferred stock receive dividends before common shareholders and have priority in the event that a company goes bankrupt and is liquidated.</i>\" [1] </p>\n",
     "\n",
     "#### What is an exchange? <br>\n",
     "\n",
     "<p>According to Investopedia: <br>\n",
     "\n",
-    "\"*An exchange is a marketplace in which securities, commodities, derivatives and other financial instruments are traded. The core function of an exchange is to ensure fair and orderly trading, as well as efficient dissemination of price information for any securities trading on that exchange. Exchanges give companies, governments and other groups a platform to sell securities to the investing public. <br>\n",
-    "A stock exchange is used to raise capital for companies seeking to grow and expand their operations.*\"[3]</p>\n",
+    "\"<i>An exchange is a marketplace in which securities, commodities, derivatives and other financial instruments are traded. The core function of an exchange is to ensure fair and orderly trading, as well as efficient dissemination of price information for any securities trading on that exchange. Exchanges give companies, governments and other groups a platform to sell securities to the investing public. <br>\n",
+    "A stock exchange is used to raise capital for companies seeking to grow and expand their operations.</i>\"[3]</p>\n",
     "\n",
     "#### What is a company's worth, and who determines its stock price? <br>\n",
     "\n",
-    "<p> \"*A company's worth, that is its total value,is its market capitalization, and it is represented by the company's stock price. Market cap (as it is commonly referred to) is equal to the stock price multiplied by the number of shares outstanding.* </p> \n",
-    "<p> *For example, Microsoft (MSFT) is trading for 71.41 USD, as of August 10th 2017, and has 7.7 billion shares outstanding/trading. Therefore, the company is valued at 71.14 USD x 7.7 billion = 550 billion USD. Thus, the stock price is a relative and proportional value of a company's worth and only represents percentage changes in market cap at any given point in time. Any percentage changes in a stock price will result in an equal percentage change in a company's value. This is the reason why investors are so concerned with stock prices and any changes that may occur since a 0.10 USD drop in a stock can result in a 100,000 USD loss for shareholders with one million shares.* </p>\n",
-    "<p> *The next logical question is: Who sets stock prices and how are they calculated? In simple terms, the stock price of a company is calculated when a company goes public, an event called an initial public offering (IPO). This is when a company pays an investment bank lots of money to use very complex formulas and valuation techniques to derive a company's value and to determine how many shares will be offered to the public and at what price. *</p>\n",
-    "<p> *After a company goes public and starts trading on the exchange, its price is determined by supply and demand for its shares in the market. If there is a high demand for its shares due to favorable factors, the price would increase. If the company's future growth potential doesn't look good, short sellers could drive down its price.\"* [4] </p>\n",
+    "<p> \"<i> A company's worth, that is its total value,is its market capitalization, and it is represented by the company's stock price. Market cap (as it is commonly referred to) is equal to the stock price multiplied by the number of shares outstanding.</i> </p> \n",
+    "<p> <i>For example, Microsoft (MSFT) is trading for 71.41 USD, as of August 10th 2017, and has 7.7 billion shares outstanding/trading. Therefore, the company is valued at 71.14 USD x 7.7 billion = 550 billion USD. Thus, the stock price is a relative and proportional value of a company's worth and only represents percentage changes in market cap at any given point in time. Any percentage changes in a stock price will result in an equal percentage change in a company's value. This is the reason why investors are so concerned with stock prices and any changes that may occur since a 0.10 USD drop in a stock can result in a 100,000 USD loss for shareholders with one million shares.</i> </p>\n",
+    "<p> <i>The next logical question is: Who sets stock prices and how are they calculated? In simple terms, the stock price of a company is calculated when a company goes public, an event called an initial public offering (IPO). This is when a company pays an investment bank lots of money to use very complex formulas and valuation techniques to derive a company's value and to determine how many shares will be offered to the public and at what price. </i></p>\n",
+    "<p> <i>After a company goes public and starts trading on the exchange, its price is determined by supply and demand for its shares in the market. If there is a high demand for its shares due to favorable factors, the price would increase. If the company's future growth potential doesn't look good, short sellers could drive down its price.\"</i> [4] </p>\n",
     "\n",
     "#### What is an Adjusted Closing Price <br>\n",
-    "<p> \"*An adjusted closing price is a stock's closing price on any given day of trading that has been amended to include any distributions and corporate actions such as __stock splits__, __dividends payments__ and __rights offerings__ that occurred at any time prior to the next day's open. The adjusted closing price is often used when examining historical returns or performing a detailed analysis on historical returns.* </p>\n",
+    "<p> \"<i>An adjusted closing price is a stock's closing price on any given day of trading that has been amended to include any distributions and corporate actions such as __stock splits__, __dividends payments__ and __rights offerings__ that occurred at any time prior to the next day's open. The adjusted closing price is often used when examining historical returns or performing a detailed analysis on historical returns.</i> </p>\n",
     "\n",
-    "<p>*A __stock split__ is a corporate action that is usually done by companies to make their share prices more marketable. A stock split does not affect a company's total market capitalization, but it does affect the company's stock price. Consequently, a company undergoing a stock split must adjust its closing price to depict the effect of the corporate action.*\n",
+    "<p><i>A __stock split__ is a corporate action that is usually done by companies to make their share prices more marketable. A stock split does not affect a company's total market capitalization, but it does affect the company's stock price. Consequently, a company undergoing a stock split must adjust its closing price to depict the effect of the corporate action.</i>\n",
     "</p>\n",
     "\n",
-    "<p>*Common distributions that affect a stock's price include __cash dividends and stock dividends__. The difference between cash dividends and stock dividends is shareholders are entitled to a predetermined price per share and additional shares, respectively. For example, assume a company declared a 1 USD cash dividend and is trading at 51 USD per share on the ex-dividend date. On the ex-dividend date, the stock price is reduced by 1 USD and the adjusted closing price is 50 USD.*\n",
+    "<p><i>Common distributions that affect a stock's price include __cash dividends and stock dividends__. The difference between cash dividends and stock dividends is shareholders are entitled to a predetermined price per share and additional shares, respectively. For example, assume a company declared a 1 USD cash dividend and is trading at 51 USD per share on the ex-dividend date. On the ex-dividend date, the stock price is reduced by 1 USD and the adjusted closing price is 50 USD.</i>\n",
     "</p>\n",
     "\n",
-    "<p>*A stock's adjusted closing price also reflects __rights offerings__ that may occur. A rights offering is an issue of rights given to existing shareholders, which entitles the shareholders to subscribe to the rights issue in proportion to their shares. For example assume a company declares a rights offering, in which existing shareholders are entitled to one additional share for every two shares owned. Assume the stock is trading at 50 USD and existing shareholders are able to purchase additional shares at a subscription price of 45 USD. On the ex-date, the adjusted closing price is calculated based on the adjusting factor and the closing price.*\"[5] </p>\n",
+    "<p><i>A stock's adjusted closing price also reflects __rights offerings__ that may occur. A rights offering is an issue of rights given to existing shareholders, which entitles the shareholders to subscribe to the rights issue in proportion to their shares. For example assume a company declares a rights offering, in which existing shareholders are entitled to one additional share for every two shares owned. Assume the stock is trading at 50 USD and existing shareholders are able to purchase additional shares at a subscription price of 45 USD. On the ex-date, the adjusted closing price is calculated based on the adjusting factor and the closing price.</i>\"[5] </p>\n",
     "\n",
     "#### The beginning <br>\n",
     "\n",
@@ -61,48 +61,59 @@
     "\n",
     "### Problem Statement\n",
     "Given historical data for different stocks, is it possible to predict those stock prices for the future?\n",
-    "In order to implement this task, a data set with the **adjusted closed prices** is needed.**Adjusted closed prices** adjusts the close prices based on corporate actions (described in previous section) <br>\n",
-    "We will also calculate some _techinical indicators_ [7] for data, using them as input for the model. The following indicators are calculated: <br>\n",
+    "In order to implement this task, a data set with the <b>adjusted closed prices</b> is needed.<b>Adjusted closed prices</b> adjusts the close prices based on corporate actions (described in previous section) <br>\n",
+    "We will also calculate some <i>techinical indicators</i> [7] for data, using them as input for the model. The following indicators are calculated: <br>\n",
     "\n",
-    "**Overlap Studies** <br>\n",
-    "- Bollinger Bands [7]\n",
-    "- Exponential Moving Average (EMA) [8]\n",
-    "- Simple Moving Average (SMA) [9]\n",
+    "<b>Overlap Studies</b> <br>\n",
+    "<ul>\n",
+    "  <li>Bollinger Bands [7]</li>\n",
+    "  <li>Exponential Moving Average (EMA) [8]</li>\n",
+    "  <li>Simple Moving Average (SMA) [9]</li>\n",
+    "</ul>  \n",
     "\n",
-    "**Momentum Indicators**\n",
-    "- Moving Average Convergence/Divergence (MACD) [10]\n",
-    "- Momentum [11]\n",
-    "- Relative Strength Index (RSI) [12]\n",
+    "<b>Momentum Indicators</b>\n",
+    "<ul>\n",
+    "  <li>Moving Average Convergence/Divergence (MACD) [10]</li>\n",
+    "  <li>Momentum [11]</li>\n",
+    "  <li>Relative Strength Index (RSI) [12]</li>\n",
+    "</ul> \n",
+    "<br>\n",
     "\n",
-    "For those tasks, TA-LIB library (http://mrjbq7.github.io/ta-lib/) will be used.\n",
+    "For those tasks, TA-LIB library (http://mrjbq7.github.io/ta-lib/) will be used. <br>\n",
     "\n",
-    "Thus the expected input for the **training algorithm** is: <br>\n",
-    "- A list of trade dates with its respectly adjusted closing price\n",
-    "- A set of technical indicators calculated based on the input list described above.\n",
-    "\n",
-    "The expected input for the **Predictor** is: <br>\n",
+    "Thus the expected input for the <b>training algorithm</b> is: <br>\n",
+    "<ul>\n",
+    "  <li>A list of trade dates with its respectly adjusted closing price</li>\n",
+    "  <li>A set of technical indicators calculated based on the input list described above.</li>\n",
+    "</ul> \n",
+    "<br>\n",
+    "The expected input for the <b>Predictor</b> is: <br>\n",
     "A list of stock symbols (aka companies tickers) and the number of days n ahead the price should be preditect.\n",
-    "**The expected output** is the price for each stock after n days. <br>\n",
+    "<b>The expected output</b> is the price for each stock after n days. <br>\n",
     "\n",
     "#### Problem Domain\n",
-    "Since the problem consists in **estimate the value** of future prices, which are **continuous quantitative data**, **a regressor is the right tool** to try to achieve this goal.\n",
+    "Since the problem consists in <b> to estimate the value </b> of future prices, which are <b>continuous quantitative data</b>, <b>a regressor is the right tool</b> to try to achieve this goal.\n",
     "\n",
     "Althougth there are some challenges to tackle:\n",
-    "- Missing price values for different stocks and as well as in different dates\n",
-    "- Training cost, since there will be a fairly amount of historical data (almost 18 years)\n",
-    "- Response time: The algorithm should return an answer in a feasibile time\n",
-    "- Feature Engineering: Which features should be used?\n",
-    "- The estimative itself: Since the market is a very uncertain environment, how to fit a regressor in order to estimate stock prices?\n",
+    "<ul>\n",
+    "  <li>Missing price values for different stocks and as well as in different dates</li>\n",
+    "  <li>Training cost, since there will be a fairly amount of historical data (almost 18 years)</li>\n",
+    "  <li>Response time: The algorithm should return an answer in a feasibile time</li>\n",
+    "  <li>Feature Engineering: Which features should be used?</li>\n",
+    "  <li>The estimative itself: Since the market is a very uncertain environment, how to fit a regressor in order to estimate stock prices?</li>\n",
+    "</ul> \n",
     "\n",
     "#### Task List\n",
     "In order to successfully estimate the prices, the following tasks are required:\n",
-    "- Download pricing data regarding the symbols queried.\n",
-    "- Clean Data, which includes some strategy to fill missing values\n",
-    "- Calculate different technical indicators on data over the time.\n",
-    "- Perform a model tuning in order to have the best model amongst different initial setups\n",
-    "\n",
+    "<ul>\n",
+    "    <li>Download pricing data regarding the symbols queried</li>\n",
+    "    <li>Clean Data, which includes some strategy to fill missing values</li>\n",
+    "    <li>Calculate different technical indicators on data over the time</li>\n",
+    "    <li> Perform a model tuning in order to have the best model amongst different initial setups</li>\n",
+    "</ul>\n",
+    "<br>\n",
     "### Metrics\n",
-    "Since the proposed solution for this problem is a regression, the model metric chosen is the **coefficient of determination, also known as $R^2$ Score**. <br>\n",
+    "Since the proposed solution for this problem is a regression, the model metric chosen is the <b>coefficient of determination, also known as $R^2$ Score</b>. <br>\n",
     "The coefficient of determination is widely used to evaulate the goodness of fit of a model. It explains how well the predictions os a model approximates to the real data. <br>\n",
     "$R^2$ Score is scaled from 0 to 1, which 1 indicating a perfect fit of the model to data.\n"
    ]
@@ -124,7 +135,9 @@
   {
    "cell_type": "code",
    "execution_count": 153,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Imports\n",
@@ -1194,12 +1207,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, it is importatant to say that there are data only for business days. That is why there is a gap between 2000-01-07 and 2000-01-10. <br>\n",
-    "It is possible to note that ABEV3 ticker have not data about January 1st and 2nd, 2000, whereas the other 3 stocks have. <br>\n",
-    "However, even the last three stocks have the same date range, the do not have the same row count (EMBR3 has the higher number of records and USIM5 has the lower number of records). <br>\n",
-    "Interestingly, USIM5 has less prices recorded than ABEV3, despite the of the fact that USIM5 has a broader range of date than ABE3. <br>\n",
-    "Given the facts above, it is very likely that these quotes miss data about some days over the years. <br>\n",
-    "Below, the plot of adjusted close prices"
+    "<p>First, it is importatant to say that there are data only for business days. That is why there is a gap between 2000-01-07 and 2000-01-10. </p>\n",
+    "<p>It is possible to note that ABEV3 ticker have not data about January 1st and 2nd, 2000, whereas the other 3 stocks have. <br>\n",
+    "However, even the last three stocks have the same date range, the do not have the same row count (EMBR3 has the higher number of records and USIM5 has the lower number of records). </p>\n",
+    "<p>Interestingly, USIM5 has less prices recorded than ABEV3, despite the of the fact that USIM5 has a broader range of date than ABE3. </p>\n",
+    "<p>Given the facts above, it is very likely that these quotes miss data about some days over the years.</p>\n",
+    "<p>Below, the plot of adjusted close prices: </p>"
    ]
   },
   {
